Changed gradient to 'my' purple

--- a/override.css
+++ b/override.css
@@ -94,7 +94,7 @@ div[role="blockquote"] {
 }
 
 article div div a + div:empty {
-  background: linear-gradient(rgb(242, 101, 102, 0.8), #1d1f33);
+  background: linear-gradient(#673ab7, #1d1f33);
 }
 
 div[data-testid="sidebarColumn"] {
